--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         margin-bottom : 10px;
         text-align : center;
         color : #707070;
+        background-color: rgba(0,0,0,0.75);
         vertical-align : middle;
       }
       .mm_button_text {
