Moved path lists out of functions into a standardized format.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Bad Ass-teroids</title>
+    <script src="paths.js"></script>
     <script src="main.js"></script>
     <style>
       body {
